cmake_minimum_required(VERSION 4.0)
project(FMSH_Matveev)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)

add_executable(FMSH_Matveev
        .idea/.gitignore
        .idea/editor.xml
        .idea/FMSH_Matveev.iml
        .idea/modules.xml
        .idea/vcs.xml
        .idea/workspace.xml
        main.cpp
        main.h
        dfdfdf.cpp)
